--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "npm-run-all --parallel start:client start:server",
     "start:client": "cd client && npm run dev",
-    "start:server": "cd server && npm run dev"
+    "start:server": "cd server && npm run dev",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build"
   }
 }
